--- a/main.css
+++ b/main.css
@@ -6,3 +6,15 @@ body{
   background-color: rgb(20, 19, 19);
   color:whitesmoke;
 }
+
+a {
+  color:aliceblue;
+}
+
+a :visited {
+  color:lightgray;
+
+}
+a :hover, a:active{
+  color:#eee;
+}
